# alist-sdk

./: .gitignore  LICNENSE  README.md  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yaml  deploy.yaml  test.yaml
alist_sdk/: __init__.py  __main__.py  alistpath.py  async_client.py  client.py  err.py  models.py  path_lib.py  path_lib_old.py  py312_pathlib.py  test_client.py  tools.py  verify.py  version.py
alist_sdk/admin/: modlue.py
alist_sdk/cmd/: __init__.py  admin.py  app.py  auth.py  base.py  fs.py
alist_sdk/fs/: __init__.py  mkdir.py  model.py
alist_sdk/tools/: client.py  configs.py  models.py
test/: init_alist.py  test_fs.py
tests/: init_alist.sh  test_async_client.py  test_client.py  test_models.py  test_path_lib.py  test_tools.py
tests/models_simple/: HashInfos.json  Items.json  ListItems.json  Me.json  RawItems.json  Resps.json  Storages.json
