[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alist-sdk"
authors = [{ name = "LeeCQ", email = "lcq@leecq.cn" }]
description = "Alist API 简单封装."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25.1", "pydantic>=2.5.1", "typer>=0.12.5"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lee-cq/alist-sdk"
Issues = "https://github.com/lee-cq/alist-sdk/issues"

[project.scripts]
alist-cli = "alist_sdk.cmd.app:app"
alist-fs = "alist_sdk.cmd.fs:fs"

[tool.setuptools]
packages = ["alist_sdk", "alist_sdk.tools", "alist_sdk.cmd"]

[tool.setuptools.dynamic]
version = { attr = "alist_sdk.version.__version__" }
